# cmake-demo

./: README.md
cmake-curl-utilsbox/: CMakeLists.txt
cmake-curl-utilsbox/cmake/: FindUTILSBOX.cmake
cmake-curl-utilsbox/src/: CMakeLists.txt  main.cpp
cmake-template/: CMakeLists.txt
cmake-template/release/doc/: Introduction.txt
cmake-template/src/: CMakeLists.txt  main.cpp
cmake-utilsbox-lib/: CMakeLists.txt
cmake-utilsbox-lib/doc/: Introduction.txt
cmake-utilsbox-lib/src/: CMakeLists.txt  utilsbox.cpp  utilsbox.h
cmake-utilsbox-lib/test/: CMakeLists.txt  main.cpp
doc/: cmake流程图.drawio
