# 声明编译要求cmake最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)


# 添加源文件
SET(SOURCE 
    main.cpp)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
# 添加一个可执行程序,名称和工程名称保持一致
ADD_EXECUTABLE(curltest ${SOURCE})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

MESSAGE(STATUS "This is BINARY dir" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir" ${PROJECT_SOURCE_DIR})

# 方案１：
# INCLUDE_DIRECTORIES(/usr/include)
# TARGET_LINK_LIBRARIES(curltest curl)

# 方案２：
FIND_PACKAGE(CURL)
IF(CURL_FOUND)
    INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(curltest ${CURL_LIBRARY})
ELSE()
    MESSAGE(FATAL_ERROR ”CURL library not found”)
ENDIF()


FIND_PACKAGE(UTILSBOX)
IF(UTILSBOX_FOUND)
    MESSAGE(STATUS "UTILSBOX_FOUND")
    INCLUDE_DIRECTORIES(${UTILSBOX_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(curltest ${UTILSBOX_LIBRARY})
ENDIF()